Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 385
    • Issues 385
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 63
    • Merge requests 63
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • FilesFiles
  • Issues
  • #2974

Selection boxes we draw shouldn't affect icons so easily, icons should have little hitboxes.

Affected version

  • Nightly flatpak: Can't test it because not enough disk space
  • Other: EndeavourOS (ArchLinux)

Steps to reproduce

  1. Just select with the mouse some icons like how big armies are selected in strategy games.

Current behavior

If just one pixel of the box you're drawing with the mouse is touching the big "hitbox" of an icon this one will be selected.

Expected behavior

We should have some room for this, if the box i'm drawing is not touching the icon itself or the text the item shouldn't be selected at all.

Additional information

Captura_desde_2023-05-24_10-22-36

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking